# Terrarium-Simulator-Cpp-Training

./: .gitignore  CMakeLists.txt  README.md  try_build_and_test.sh
include/simulator/: bug.hpp  bug_descriptor.hpp  bug_notifier.hpp  bug_observer.hpp  map_cell.hpp  simulation_engine.hpp  simulation_map.hpp
src/: bug.cpp  bug_descriptor.cpp  bug_notifier.cpp  main.cpp  map_cell.cpp  simulation_engine.cpp  simulation_map.cpp
test/: CMakeLists.txt  test_bug.cpp  test_bug_notifier.cpp  test_map_cell.cpp  test_simulation_map.cpp
test/mocks/: bug_observer_mock.h
